# rustlink

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: codespell.yml  md-link.yml  rust.yml  shellcheck.yml
