[package]
name = "rustlink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = {version = "4", features = ["derive"]}
parse_int = "0.6.0"
probe-rs = "0.18.0"
probe-rs-cli-util = "0.18.0"
